# term_pong

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: app.rs  main.rs  model.rs  ui.rs
