[package]
name = "pong"
version = "1.1.0"
edition = "2024"
authors = ["Adam Milner"]
description = "Pong in the terminal."
license = "MIT"
repository = "https://github.com/carmiac/term_pong"
keywords = ["pong", "game", "terminal", "tui", "ratatui"]
categories = ["games", "command-line-utilities"]

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
rand = "0.9.2"
ratatui = "0.30.0"
tca-ratatui = "0.3.0"
